--- a/calculator.html
+++ b/calculator.html
@@ -20,33 +20,33 @@
     <div id="calculator-body">
       <!-- Button Rows -->
       <div class="row">
-        <div class="button" id="other">AC</div>
-        <div class="button" id="other">+/-</div>
-        <div class="button" id="other">%</div>
-        <div class="button" id="operator">/</div>
+        <div class="button other" id="clear">AC</div>
+        <div class="button other" id="plus_minus">+/-</div>
+        <div class="button other" id="percent">%</div>
+        <div class="button operator" id="divide">/</div>
       </div>
       <div class="row">
-        <div class="button" id="number">7</div>
-        <div class="button" id="number">8</div>
-        <div class="button" id="number">9</div>
-        <div class="button" id="operator">X</div>
+        <div class="button number" id="button_7">7</div>
+        <div class="button number" id="button_8">8</div>
+        <div class="button number" id="button_9">9</div>
+        <div class="button operator" id="multiply">X</div>
       </div>
       <div class="row">
-        <div class="button" id="number">4</div>
-        <div class="button" id="number">5</div>
-        <div class="button" id="number">6</div>
-        <div class="button" id="operator">—</div>
+        <div class="button number" id="button_4">4</div>
+        <div class="button number" id="button_5">5</div>
+        <div class="button number" id="button_6">6</div>
+        <div class="button operator" id="subtract">—</div>
       </div>
       <div class="row">
-        <div class="button" id="number">1</div>
-        <div class="button" id="number">2</div>
-        <div class="button" id="number">3</div>
-        <div class="button" id="operator">+</div>
+        <div class="button number" id="button_1">1</div>
+        <div class="button number" id="button_2">2</div>
+        <div class="button number" id="button_3">3</div>
+        <div class="button operator" id="add">+</div>
       </div>
       <div class="row">
-        <div class="button" id="zero">0</div>
-        <div class="button" id="number">.</div>
-        <div class="button" id="operator">=</div>
+        <div class="button zero" id="button_0">0</div>
+        <div class="button number" id="decimal">.</div>
+        <div class="button operator" id="equals">=</div>
       </div>
     </div>
   </body>
